[package]
name = "panini_macros_snapshot"
version = "0.0.0"

description = """
A parser generator. This package is a snapshot in the form of two expanded
syntax extensions.
"""
authors = ["Piotr Czarnecki <pioczarn@gmail.com>"]
repository = "https://github.com/pczarn/panini-snapshot/"
license = "MIT/Apache-2.0"

[lib]
name = "panini_macros_snapshot"
plugin = true

[dependencies]
env_logger = "0.3"
aster = "0.21"
quasi = "0.15"
quasi_macros = "0.15"

enum_stream_codegen = "0.0"
panini_codegen = "0.0"
panini = "0.0"
